--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
           <div class='swipe-wrap'>
             <div><p>這是一個讓你在吃飽喝醉之後，不會睡倒在街頭的App</p><img src="images/resize/tutorial01.png" alt=""></div>
             <div><p>使用方式很簡單，在你出門之前，先設定好你的緊急聯絡人電話</p><img src="images/resize/tutorial02.png" alt=""></div>
-            <div><p>然後在Home Screen上新增這個App的小工具(Home Screen Wedgit)，方便你即使醉得亂七八糟，打開電話時還能找到這個App</p><img src="images/resize/tutorial03.png" alt=""></div>
+            <div>
+              <p>記得把App加到書簽，再放到主畫面(Add to Home Screen)</p>
+              <img src="images/resize/screen01.png" alt="" class="screenShot">
+              <img src="images/resize/screen02.png" alt="" class="screenShot">
+            </div>
+            <div>
+              <p>按加入之後，再把App放到常用欄位內，方便你醉了也能找得回來！</p>
+              <img src="images/resize/screen03.png" alt="" class="screenShot" >
+              <img src="images/resize/screen04.png" alt="" class="screenShot" >
+            </div>
             <div>
               <p>快來設定吧！</p>
               <a id='close-welcome-btn' data-role='button' data-rel='back' class='ui-btn-left'>完成</a>
